Implement initial login logic /auth/login - verify username and password against staffPassword field Return bearer token on successful login for future authentication Only one token per user, so at most one active browser session at a time /auth/logout - Provide UUID and token, then invalidate stored token
