# swagger.json
@@ -11,52 +11,7 @@
     }
   ],
   "paths": {
-    "/auth/signup/": {
-      "post": {
-        "description": "Register user to application",
-        "tags": [
-          "auth"
-        ],
-        "requestBody": {
-          "description": "sign up body",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserSchema"
-              },
-              "example": {
-                "email": "test.user@mail.com",
-                "password": "test_test"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "user successfuly signed up",
-            "content": {
-              "appication/json": {
-                "example": {
-                  "message": "You have signed up successfully"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "sign up failed",
-            "content": {
-              "application/json": {
-                "example": {
-                  "message": "Email already exists"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/auth/login/": {
+    "/auth/login": {
       "post": {
         "description": "Login user to application",
         "tags": [
@@ -71,8 +26,8 @@
                 "$ref": "#/components/schemas/UserSchema"
               },
               "example": {
-                "email": "test.user@mail.com",
-                "password": "test_test"
+                "username": "Legobuilder0813",
+                "password": "S3cureP@ssw0rd"
               }
             }
           }
@@ -109,7 +64,56 @@
         }
       }
     },
-    "/auth/user/": {
+    "/auth/logout": {
+      "post": {
+        "description": "Logout from application",
+        "tags": [
+          "auth"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "logout body",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserSchema"
+              },
+              "example": {
+                "uuid": "9ab3b4c4-71d8-47c9-9e7d-adf040c53d2b"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "user successfuly logged out",
+            "content": {
+              "appication/json": {
+                "example": {
+                  "message": "Logout Success!"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Not logged out, invalid credentials",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Invalid credentials"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/user": {
       "get": {
         "description": "Get authenticated user",
         "tags": [
@@ -136,7 +140,7 @@
             }
           },
           "default": {
-            "description": "unexpected error",
+            "description": "invalid user",
             "content": {
               "application/json": {
                 "schema": {
@@ -148,100 +152,9 @@
         }
       }
     },
-    "/v1/users": {
+    "/users/{uuid}": {
       "get": {
-        "description": "Get all stored users in Database",
-        "tags": [
-          "users"
-        ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "An array of users",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "oneOf": [
-                    {
-                      "$ref": "#/components/schemas/Users"
-                    }
-                  ]
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "description": "Create new User",
-        "tags": [
-          "users"
-        ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "description": "user creation request body",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UserSchema"
-              },
-              "example": {
-                "name": "userName",
-                "email": "test.user@mail.com"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "return created user",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "oneOf": [
-                    {
-                      "$ref": "#/components/schemas/UserSchema"
-                    }
-                  ]
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/v1/users/{id}": {
-      "get": {
-        "description": "Get user by userId",
+        "description": "Get user by UUID",
         "tags": [
           "users"
         ],
@@ -253,8 +166,8 @@
         "parameters": [
           {
             "in": "path",
-            "name": "id",
-            "description": "the unique userId",
+            "name": "uuid",
+            "description": "the user's UUID",
             "required": true,
             "schema": {
               "type": "string"
@@ -263,45 +176,7 @@
         ],
         "responses": {
           "200": {
-            "description": "return user by id",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "oneOf": [
-                    {
-                      "$ref": "#/components/schemas/UserSchema"
-                    }
-                  ]
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "description": "Delete user by userId",
-        "tags": [
-          "users"
-        ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "description": "the unique userId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "return deleted user",
+            "description": "return user by UUID",
             "content": {
               "application/json": {
                 "schema": {
@@ -322,38 +197,22 @@
     "schemas": {
       "UserSchema": {
         "required": [
-          "email",
-          "name"
+          "username",
+          "password"
         ],
         "properties": {
-          "id": {
+          "uuid": {
             "type": "string"
           },
-          "name": {
-            "type": "string"
-          },
-          "email": {
+          "username": {
             "type": "string"
           },
           "password": {
             "type": "string"
           },
-          "passwordResetToken": {
-            "type": "string"
-          },
-          "passwordResetExpires": {
-            "type": "string",
-            "format": "date"
-          },
           "tokens": {
             "type": "array"
           }
-        }
-      },
-      "Users": {
-        "type": "array",
-        "items": {
-          "$ref": "#/components/schemas/UserSchema"
         }
       },
       "Error": {
@@ -371,7 +230,7 @@
           "message": {
             "type": "string",
             "description": "Error description",
-            "example": "User created"
+            "example": "Unknown player UUID"
           }
         }
       }
